--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,15 @@
                     android:text="@string/csvNameDefault" />
             </LinearLayout>
 
+            <Button
+                android:id="@+id/settingsButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:onClick="openSettings"
+                android:text="@string/settingsButton" />
+
         </LinearLayout>
     </ScrollView>
 
