--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,38 @@
                     android:text="@string/csvNameDefault" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/userInputMode"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/ModeLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/modeLabel" />
+
+                <Spinner
+                    android:id="@+id/ModeSpinner"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:entries="@array/spinnerItems" />
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/applyButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:onClick="applySettings"
+                android:text="@string/applyButton" />
+
         </LinearLayout>
     </ScrollView>
 
