--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -129,6 +129,29 @@
                     android:text="@string/csvNameDefault" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/userDeviceName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/DeviceNameLabel"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/deviceNameLabel" />
+
+                <EditText
+                    android:id="@+id/DeviceNameText"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:inputType="textPersonName"
+                    android:text="@string/deviceNameDefault" />
+            </LinearLayout>
+
             <Button
                 android:id="@+id/applyButton"
                 android:layout_width="wrap_content"
