--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/nav_train"
-        android:name="com.pwr.activitytracker.ui.train.TrainFragment"
+        android:name="com.pwr.activitytracker.data.model.ui.train.TrainFragment"
         android:label="@string/menu_train"
         tools:layout="@layout/fragment_train" />
 
     <fragment
         android:id="@+id/nav_history"
-        android:name="com.pwr.activitytracker.ui.history.HistoryFragment"
+        android:name="com.pwr.activitytracker.data.model.ui.history.HistoryFragment"
         android:label="@string/menu_history"
         tools:layout="@layout/fragment_history" />
 
     <fragment
         android:id="@+id/nav_settings"
-        android:name="com.pwr.activitytracker.ui.settings.SettingsFragment"
+        android:name="com.pwr.activitytracker.data.model.ui.settings.SettingsFragment"
         android:label="@string/menu_settings"
         tools:layout="@layout/fragment_settings" />
 </navigation>
