--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ListView
+            android:layout_width="328dp"
+            android:layout_height="115dp"
+            tools:layout_editor_absoluteX="8dp"
+            tools:layout_editor_absoluteY="167dp"
+            android:id="@+id/listview"
+            tools:ignore="MissingConstraints" />
+
         <TextView
             android:id="@+id/sensorName"
             android:layout_width="wrap_content"
